GoLaunch/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  namespace: go-launch-app # Added namespace
  labels:
    app: go-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
      annotations:
        checksum/config: ${CONFIG_CHECKSUM} # Ensure this is calculated and set correctly
    spec:
      serviceAccountName: external-secrets-sa # Ensure this service account exists and has necessary permissions
      containers:
        - name: go-web-app
          image: ghcr.io/elliotsecops/github-actions-ci-cd-pipeline:${GITHUB_SHA}
          imagePullPolicy: Always # Added imagePullPolicy
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
