GoLaunch/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  namespace: go-launch-app  # Ensure this matches your deployment's namespace
spec:
  selector:
    app: go-web-app
  ports:
  - protocol: TCP
    port: 80  # External port users will access
    targetPort: 8080  # Port your application listens on inside the container
  type: LoadBalancer  # Use LoadBalancer for external access. Consider Ingress for more advanced configurations.
